--- a/NonYeZhiChuang/app/src/main/AndroidManifest.xml
+++ b/NonYeZhiChuang/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".activity.ShouyeActivity" />
         <activity android:name=".activity.WebActivity" />
         <activity android:name=".activity.TestActivity"></activity>
+        <activity android:name=".activity.ShangPinXiangQingActivity"></activity>
     </application>
 
 </manifest>
